--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,42 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.layout {
+  margin: 0 auto;
+  width: 70%;
+  max-width: 1200px;
 }
 
-a {
-  color: inherit;
+
+.navigation{
+  line-height: 3rem;
+  height: 3rem;
+  display: flex;
+}
+
+.navigation li {
+  line-height: 3rem;
+  height: 3rem;
+  padding: 16px;
+  margin-right: 10px;
+  border-radius: 6px;
+  background: navy;
+  vertical-align: middle;
+}
+
+.navigation li a {
+  height: 3rem;
+  line-height: 3rem;
+  color: white;
+  font-size: 24px;
   text-decoration: none;
+  vertical-align: middle;
 }
 
-* {
-  box-sizing: border-box;
+
+.list-group {
+  margin-top: 2rem;
+}
+
+.list-group li {
+  line-height: 2rem;
+  height: 2rem;
+  font-size: 18px;
 }
